// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generatePlate > full mixed-key layout (3×1u + 1.25u + ISO Enter) > matches snapshot 1`] = `
{
  "area": 37.39322500000001,
  "cutPathLength": 352,
  "dxf": "0
SECTION
2
HEADER
9
$ACADVER
1
AC1009
9
$INSBASE
10
0.0
20
0.0
30
0.0
9
$EXTMIN
10
0.0
20
0.0
30
0.0
9
$EXTMAX
10
1000.0
20
1000.0
30
0.0
0
ENDSEC
0
SECTION
2
TABLES
0
TABLE
2
LAYER
5
2
70
4
0
LAYER
5
10
2
0
70
0
62
7
6
Continuous
0
LAYER
5
11
2
PLATE
70
0
62
1
6
Continuous
0
LAYER
5
12
2
CUT
70
0
62
5
6
Continuous
0
ENDTAB
0
ENDSEC
0
SECTION
2
ENTITIES
0
POLYLINE
8
PLATE
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
73.1500
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
73.1500
20
-73.1500
30
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-73.1500
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
9.5250
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
23.5250
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
23.5250
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
9.5250
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
9.5250
20
-9.5250
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
11.9063
20
-28.5750
30
0.0
0
VERTEX
8
CUT
10
25.9063
20
-28.5750
30
0.0
0
VERTEX
8
CUT
10
25.9063
20
-42.5750
30
0.0
0
VERTEX
8
CUT
10
11.9063
20
-42.5750
30
0.0
0
VERTEX
8
CUT
10
11.9063
20
-28.5750
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
28.5750
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
42.5750
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
42.5750
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
28.5750
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
28.5750
20
-9.5250
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
34.7488
20
-31.5500
30
0.0
0
VERTEX
8
CUT
10
35.9488
20
-31.5500
30
0.0
0
VERTEX
8
CUT
10
35.9488
20
-29.8250
30
0.0
0
VERTEX
8
CUT
10
42.2188
20
-29.8250
30
0.0
0
VERTEX
8
CUT
10
42.2188
20
-29.0000
30
0.0
0
VERTEX
8
CUT
10
45.0187
20
-29.0000
30
0.0
0
VERTEX
8
CUT
10
45.0187
20
-29.8250
30
0.0
0
VERTEX
8
CUT
10
48.2488
20
-29.8250
30
0.0
0
VERTEX
8
CUT
10
48.2488
20
-36.5750
30
0.0
0
VERTEX
8
CUT
10
45.0187
20
-36.5750
30
0.0
0
VERTEX
8
CUT
10
45.0187
20
-38.1000
30
0.0
0
VERTEX
8
CUT
10
49.7188
20
-38.1000
30
0.0
0
VERTEX
8
CUT
10
49.7188
20
-52.1000
30
0.0
0
VERTEX
8
CUT
10
45.0187
20
-52.1000
30
0.0
0
VERTEX
8
CUT
10
45.0187
20
-53.6250
30
0.0
0
VERTEX
8
CUT
10
48.2488
20
-53.6250
30
0.0
0
VERTEX
8
CUT
10
48.2488
20
-60.3750
30
0.0
0
VERTEX
8
CUT
10
45.0187
20
-60.3750
30
0.0
0
VERTEX
8
CUT
10
45.0187
20
-61.2000
30
0.0
0
VERTEX
8
CUT
10
42.2188
20
-61.2000
30
0.0
0
VERTEX
8
CUT
10
42.2188
20
-60.3750
30
0.0
0
VERTEX
8
CUT
10
35.9488
20
-60.3750
30
0.0
0
VERTEX
8
CUT
10
35.9488
20
-58.6500
30
0.0
0
VERTEX
8
CUT
10
34.7488
20
-58.6500
30
0.0
0
VERTEX
8
CUT
10
34.7488
20
-55.3500
30
0.0
0
VERTEX
8
CUT
10
35.9488
20
-55.3500
30
0.0
0
VERTEX
8
CUT
10
35.9488
20
-53.6250
30
0.0
0
VERTEX
8
CUT
10
40.4188
20
-53.6250
30
0.0
0
VERTEX
8
CUT
10
40.4188
20
-52.1000
30
0.0
0
VERTEX
8
CUT
10
35.7188
20
-52.1000
30
0.0
0
VERTEX
8
CUT
10
35.7188
20
-38.1000
30
0.0
0
VERTEX
8
CUT
10
40.4188
20
-38.1000
30
0.0
0
VERTEX
8
CUT
10
40.4188
20
-36.5750
30
0.0
0
VERTEX
8
CUT
10
35.9488
20
-36.5750
30
0.0
0
VERTEX
8
CUT
10
35.9488
20
-34.8500
30
0.0
0
VERTEX
8
CUT
10
34.7488
20
-34.8500
30
0.0
0
VERTEX
8
CUT
10
34.7488
20
-31.5500
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
47.6250
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
61.6250
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
61.6250
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
47.6250
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
47.6250
20
-9.5250
30
0.0
0
SEQEND
0
ENDSEC
0
EOF",
  "height": 61.150000000000006,
  "regions": [
    {
      "baseH": 13.999999999999998,
      "baseW": 13.999999999999998,
      "baseX": 9.525,
      "baseY": 9.525,
      "centerX": 16.525,
      "centerY": 16.525,
      "h": 13.999999999999998,
      "id": "key-0",
      "keyIndex": 0,
      "type": "key",
      "w": 13.999999999999998,
      "x": 9.525,
      "y": 9.525,
    },
    {
      "baseH": 13.999999999999998,
      "baseW": 14,
      "baseX": 28.575000000000003,
      "baseY": 9.525,
      "centerX": 35.575,
      "centerY": 16.525,
      "h": 13.999999999999998,
      "id": "key-1",
      "keyIndex": 1,
      "type": "key",
      "w": 14,
      "x": 28.575000000000003,
      "y": 9.525,
    },
    {
      "baseH": 13.999999999999998,
      "baseW": 14,
      "baseX": 47.625,
      "baseY": 9.525,
      "centerX": 54.625,
      "centerY": 16.525,
      "h": 13.999999999999998,
      "id": "key-2",
      "keyIndex": 2,
      "type": "key",
      "w": 14,
      "x": 47.625,
      "y": 9.525,
    },
    {
      "baseH": 14,
      "baseW": 14,
      "baseX": 11.90625,
      "baseY": 28.575000000000003,
      "centerX": 18.90625,
      "centerY": 35.575,
      "h": 14,
      "id": "key-3",
      "keyIndex": 3,
      "type": "key",
      "w": 14,
      "x": 11.90625,
      "y": 28.575000000000003,
    },
    {
      "baseH": 32.2,
      "baseW": 14.969999999999999,
      "baseX": 34.74875,
      "baseY": 29,
      "centerX": 42.71875,
      "centerY": 45.1,
      "h": 32.2,
      "id": "key-4",
      "keyIndex": 4,
      "type": "key",
      "w": 14.969999999999999,
      "x": 34.74875,
      "y": 29,
    },
  ],
  "stpData": {
    "boundary": [
      [
        -2,
        2,
      ],
      [
        59.150000000000006,
        2,
      ],
      [
        59.150000000000006,
        -59.150000000000006,
      ],
      [
        -2,
        -59.150000000000006,
      ],
    ],
    "circleHoles": [],
    "polyHoles": [
      [
        [
          2.5250000000000004,
          -2.5250000000000004,
        ],
        [
          16.525,
          -2.5250000000000004,
        ],
        [
          16.525,
          -16.525,
        ],
        [
          2.5250000000000004,
          -16.525,
        ],
        [
          2.5250000000000004,
          -2.5250000000000004,
        ],
      ],
      [
        [
          4.90625,
          -21.575000000000003,
        ],
        [
          18.90625,
          -21.575000000000003,
        ],
        [
          18.90625,
          -35.575,
        ],
        [
          4.90625,
          -35.575,
        ],
        [
          4.90625,
          -21.575000000000003,
        ],
      ],
      [
        [
          21.575000000000003,
          -2.5250000000000004,
        ],
        [
          35.575,
          -2.5250000000000004,
        ],
        [
          35.575,
          -16.525,
        ],
        [
          21.575000000000003,
          -16.525,
        ],
        [
          21.575000000000003,
          -2.5250000000000004,
        ],
      ],
      [
        [
          27.74875,
          -24.55,
        ],
        [
          28.94875,
          -24.55,
        ],
        [
          28.94875,
          -22.825000000000003,
        ],
        [
          35.21875,
          -22.825000000000003,
        ],
        [
          35.21875,
          -22,
        ],
        [
          38.01875,
          -22,
        ],
        [
          38.01875,
          -22.825000000000003,
        ],
        [
          41.24875,
          -22.825000000000003,
        ],
        [
          41.24875,
          -29.575000000000003,
        ],
        [
          38.01875,
          -29.575000000000003,
        ],
        [
          38.01875,
          -31.1,
        ],
        [
          42.71875,
          -31.1,
        ],
        [
          42.71875,
          -45.1,
        ],
        [
          38.01875,
          -45.1,
        ],
        [
          38.01875,
          -46.625,
        ],
        [
          41.24875,
          -46.625,
        ],
        [
          41.24875,
          -53.375,
        ],
        [
          38.01875,
          -53.375,
        ],
        [
          38.01875,
          -54.2,
        ],
        [
          35.21875,
          -54.2,
        ],
        [
          35.21875,
          -53.375,
        ],
        [
          28.94875,
          -53.375,
        ],
        [
          28.94875,
          -51.650000000000006,
        ],
        [
          27.74875,
          -51.650000000000006,
        ],
        [
          27.74875,
          -48.35,
        ],
        [
          28.94875,
          -48.35,
        ],
        [
          28.94875,
          -46.625,
        ],
        [
          33.41875,
          -46.625,
        ],
        [
          33.41875,
          -45.1,
        ],
        [
          28.71875,
          -45.1,
        ],
        [
          28.71875,
          -31.1,
        ],
        [
          33.41875,
          -31.1,
        ],
        [
          33.41875,
          -29.575000000000003,
        ],
        [
          28.94875,
          -29.575000000000003,
        ],
        [
          28.94875,
          -27.85,
        ],
        [
          27.74875,
          -27.85,
        ],
        [
          27.74875,
          -24.55,
        ],
      ],
      [
        [
          40.625,
          -2.5250000000000004,
        ],
        [
          54.625,
          -2.5250000000000004,
        ],
        [
          54.625,
          -16.525,
        ],
        [
          40.625,
          -16.525,
        ],
        [
          40.625,
          -2.5250000000000004,
        ],
      ],
    ],
  },
  "svg": "<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 71.2 71.2" width="71.2mm" height="71.2mm" style="max-width:100%;height:auto">
  <style>path{vector-effect:non-scaling-stroke}</style>
  <rect x="5" y="5" width="61.150000000000006" height="61.150000000000006" rx="0" fill="#e8e8e8" stroke="#bbb" stroke-width="0.5"/>
  <g fill="#fff" stroke="#888" stroke-width="0.3"><path d="M9.525,9.525L23.525,9.525L23.525,23.525L9.525,23.525L9.525,9.525Z"/><path d="M11.906,28.575L25.906,28.575L25.906,42.575L11.906,42.575L11.906,28.575Z"/><path d="M28.575,9.525L42.575,9.525L42.575,23.525L28.575,23.525L28.575,9.525Z"/><path d="M34.749,31.550L35.949,31.550L35.949,29.825L42.219,29.825L42.219,29.000L45.019,29.000L45.019,29.825L48.249,29.825L48.249,36.575L45.019,36.575L45.019,38.100L49.719,38.100L49.719,52.100L45.019,52.100L45.019,53.625L48.249,53.625L48.249,60.375L45.019,60.375L45.019,61.200L42.219,61.200L42.219,60.375L35.949,60.375L35.949,58.650L34.749,58.650L34.749,55.350L35.949,55.350L35.949,53.625L40.419,53.625L40.419,52.100L35.719,52.100L35.719,38.100L40.419,38.100L40.419,36.575L35.949,36.575L35.949,34.850L34.749,34.850L34.749,31.550Z"/><path d="M47.625,9.525L61.625,9.525L61.625,23.525L47.625,23.525L47.625,9.525Z"/></g>
</svg>",
  "width": 61.150000000000006,
}
`;

exports[`getStabOffset boundary values (via generatePlate, stabType=1) > 1u key: no stabilizer, cut perimeter ≈ 56mm 1`] = `
{
  "area": 5.313025,
  "cutPathLength": 55.99999999999999,
  "dxf": "0
SECTION
2
HEADER
9
$ACADVER
1
AC1009
9
$INSBASE
10
0.0
20
0.0
30
0.0
9
$EXTMIN
10
0.0
20
0.0
30
0.0
9
$EXTMAX
10
1000.0
20
1000.0
30
0.0
0
ENDSEC
0
SECTION
2
TABLES
0
TABLE
2
LAYER
5
2
70
4
0
LAYER
5
10
2
0
70
0
62
7
6
Continuous
0
LAYER
5
11
2
PLATE
70
0
62
1
6
Continuous
0
LAYER
5
12
2
CUT
70
0
62
5
6
Continuous
0
ENDTAB
0
ENDSEC
0
SECTION
2
ENTITIES
0
POLYLINE
8
PLATE
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
35.0500
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
35.0500
20
-35.0500
30
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-35.0500
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
23.5250
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
23.5250
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
9.5250
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
9.5250
20
-9.5250
30
0.0
0
SEQEND
0
ENDSEC
0
EOF",
  "height": 23.05,
  "regions": [
    {
      "baseH": 13.999999999999998,
      "baseW": 13.999999999999998,
      "baseX": 9.525,
      "baseY": 9.525,
      "centerX": 16.525,
      "centerY": 16.525,
      "h": 13.999999999999998,
      "id": "key-0",
      "keyIndex": 0,
      "type": "key",
      "w": 13.999999999999998,
      "x": 9.525,
      "y": 9.525,
    },
  ],
  "stpData": {
    "boundary": [
      [
        -2,
        2,
      ],
      [
        21.05,
        2,
      ],
      [
        21.05,
        -21.05,
      ],
      [
        -2,
        -21.05,
      ],
    ],
    "circleHoles": [],
    "polyHoles": [
      [
        [
          16.525,
          -2.5250000000000004,
        ],
        [
          16.525,
          -16.525,
        ],
        [
          2.5250000000000004,
          -16.525,
        ],
        [
          2.5250000000000004,
          -2.5250000000000004,
        ],
      ],
    ],
  },
  "svg": "<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 33.0 33.0" width="33.0mm" height="33.0mm" style="max-width:100%;height:auto">
  <style>path{vector-effect:non-scaling-stroke}</style>
  <rect x="5" y="5" width="23.05" height="23.05" rx="0" fill="#e8e8e8" stroke="#bbb" stroke-width="0.5"/>
  <g fill="#fff" stroke="#888" stroke-width="0.3"><path d="M23.525,9.525L23.525,23.525L9.525,23.525L9.525,9.525Z"/></g>
</svg>",
  "width": 23.05,
}
`;

exports[`getStabOffset boundary values (via generatePlate, stabType=1) > 2u key: stabilizer at offset 11.9mm (23.8mm / 2) 1`] = `
{
  "area": 9.70405,
  "cutPathLength": 128.00000000000003,
  "dxf": "0
SECTION
2
HEADER
9
$ACADVER
1
AC1009
9
$INSBASE
10
0.0
20
0.0
30
0.0
9
$EXTMIN
10
0.0
20
0.0
30
0.0
9
$EXTMAX
10
1000.0
20
1000.0
30
0.0
0
ENDSEC
0
SECTION
2
TABLES
0
TABLE
2
LAYER
5
2
70
4
0
LAYER
5
10
2
0
70
0
62
7
6
Continuous
0
LAYER
5
11
2
PLATE
70
0
62
1
6
Continuous
0
LAYER
5
12
2
CUT
70
0
62
5
6
Continuous
0
ENDTAB
0
ENDSEC
0
SECTION
2
ENTITIES
0
POLYLINE
8
PLATE
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
54.1000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
54.1000
20
-35.0500
30
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-35.0500
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
9.9500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
10.7750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
10.7750
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
17.5250
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
17.5250
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
19.0500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
19.0500
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
33.0500
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
33.0500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
34.5750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
34.5750
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
41.3250
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
41.3250
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
42.1500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
42.1500
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
41.3250
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
41.3250
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
39.6000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
39.6000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
36.3000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
36.3000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
34.5750
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
34.5750
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
33.0500
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
33.0500
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
19.0500
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
19.0500
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
17.5250
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
17.5250
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
15.8000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
15.8000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
12.5000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
12.5000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
10.7750
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
10.7750
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
9.9500
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
9.9500
20
-14.2250
30
0.0
0
SEQEND
0
ENDSEC
0
EOF",
  "height": 23.05,
  "regions": [
    {
      "baseH": 14.97,
      "baseW": 32.2,
      "baseX": 9.95,
      "baseY": 9.525,
      "centerX": 26.05,
      "centerY": 16.525,
      "h": 14.97,
      "id": "key-0",
      "keyIndex": 0,
      "type": "key",
      "w": 32.2,
      "x": 9.95,
      "y": 9.525,
    },
  ],
  "stpData": {
    "boundary": [
      [
        -2,
        2,
      ],
      [
        40.1,
        2,
      ],
      [
        40.1,
        -21.05,
      ],
      [
        -2,
        -21.05,
      ],
    ],
    "circleHoles": [],
    "polyHoles": [
      [
        [
          2.9499999999999993,
          -7.2250000000000005,
        ],
        [
          3.7750000000000004,
          -7.2250000000000005,
        ],
        [
          3.7750000000000004,
          -3.995,
        ],
        [
          10.525,
          -3.995,
        ],
        [
          10.525,
          -7.2250000000000005,
        ],
        [
          12.05,
          -7.2250000000000005,
        ],
        [
          12.05,
          -2.5250000000000004,
        ],
        [
          26.05,
          -2.5250000000000004,
        ],
        [
          26.05,
          -7.2250000000000005,
        ],
        [
          27.575000000000003,
          -7.2250000000000005,
        ],
        [
          27.575000000000003,
          -3.995,
        ],
        [
          34.325,
          -3.995,
        ],
        [
          34.325,
          -7.2250000000000005,
        ],
        [
          35.150000000000006,
          -7.2250000000000005,
        ],
        [
          35.150000000000006,
          -10.025,
        ],
        [
          34.325,
          -10.025,
        ],
        [
          34.325,
          -16.295,
        ],
        [
          32.6,
          -16.295,
        ],
        [
          32.6,
          -17.495,
        ],
        [
          29.3,
          -17.495,
        ],
        [
          29.3,
          -16.295,
        ],
        [
          27.575000000000003,
          -16.295,
        ],
        [
          27.575000000000003,
          -11.825,
        ],
        [
          26.05,
          -11.825,
        ],
        [
          26.05,
          -16.525,
        ],
        [
          12.05,
          -16.525,
        ],
        [
          12.05,
          -11.825,
        ],
        [
          10.525,
          -11.825,
        ],
        [
          10.525,
          -16.295,
        ],
        [
          8.8,
          -16.295,
        ],
        [
          8.8,
          -17.495,
        ],
        [
          5.5,
          -17.495,
        ],
        [
          5.5,
          -16.295,
        ],
        [
          3.7750000000000004,
          -16.295,
        ],
        [
          3.7750000000000004,
          -10.025,
        ],
        [
          2.9499999999999993,
          -10.025,
        ],
        [
          2.9499999999999993,
          -7.2250000000000005,
        ],
      ],
    ],
  },
  "svg": "<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52.1 33.0" width="52.1mm" height="33.0mm" style="max-width:100%;height:auto">
  <style>path{vector-effect:non-scaling-stroke}</style>
  <rect x="5" y="5" width="42.1" height="23.05" rx="0" fill="#e8e8e8" stroke="#bbb" stroke-width="0.5"/>
  <g fill="#fff" stroke="#888" stroke-width="0.3"><path d="M9.950,14.225L10.775,14.225L10.775,10.995L17.525,10.995L17.525,14.225L19.050,14.225L19.050,9.525L33.050,9.525L33.050,14.225L34.575,14.225L34.575,10.995L41.325,10.995L41.325,14.225L42.150,14.225L42.150,17.025L41.325,17.025L41.325,23.295L39.600,23.295L39.600,24.495L36.300,24.495L36.300,23.295L34.575,23.295L34.575,18.825L33.050,18.825L33.050,23.525L19.050,23.525L19.050,18.825L17.525,18.825L17.525,23.295L15.800,23.295L15.800,24.495L12.500,24.495L12.500,23.295L10.775,23.295L10.775,17.025L9.950,17.025L9.950,14.225Z"/></g>
</svg>",
  "width": 42.1,
}
`;

exports[`getStabOffset boundary values (via generatePlate, stabType=1) > 3u key: 2u stabilizer at offset 11.9mm (23.8mm / 2) 1`] = `
{
  "area": 14.095075000000001,
  "cutPathLength": 128.00000000000003,
  "dxf": "0
SECTION
2
HEADER
9
$ACADVER
1
AC1009
9
$INSBASE
10
0.0
20
0.0
30
0.0
9
$EXTMIN
10
0.0
20
0.0
30
0.0
9
$EXTMAX
10
1000.0
20
1000.0
30
0.0
0
ENDSEC
0
SECTION
2
TABLES
0
TABLE
2
LAYER
5
2
70
4
0
LAYER
5
10
2
0
70
0
62
7
6
Continuous
0
LAYER
5
11
2
PLATE
70
0
62
1
6
Continuous
0
LAYER
5
12
2
CUT
70
0
62
5
6
Continuous
0
ENDTAB
0
ENDSEC
0
SECTION
2
ENTITIES
0
POLYLINE
8
PLATE
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
73.1500
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
73.1500
20
-35.0500
30
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-35.0500
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
19.4750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
20.3000
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
20.3000
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
27.0500
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
27.0500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
28.5750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
28.5750
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
42.5750
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
42.5750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
44.1000
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
44.1000
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
50.8500
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
50.8500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
51.6750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
51.6750
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
50.8500
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
50.8500
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
49.1250
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
49.1250
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
45.8250
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
45.8250
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
44.1000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
44.1000
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
42.5750
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
42.5750
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
28.5750
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
28.5750
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
27.0500
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
27.0500
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
25.3250
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
25.3250
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
22.0250
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
22.0250
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
20.3000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
20.3000
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
19.4750
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
19.4750
20
-14.2250
30
0.0
0
SEQEND
0
ENDSEC
0
EOF",
  "height": 23.05,
  "regions": [
    {
      "baseH": 14.97,
      "baseW": 32.2,
      "baseX": 19.475,
      "baseY": 9.525,
      "centerX": 35.575,
      "centerY": 16.525,
      "h": 14.97,
      "id": "key-0",
      "keyIndex": 0,
      "type": "key",
      "w": 32.2,
      "x": 19.475,
      "y": 9.525,
    },
  ],
  "stpData": {
    "boundary": [
      [
        -2,
        2,
      ],
      [
        59.150000000000006,
        2,
      ],
      [
        59.150000000000006,
        -21.05,
      ],
      [
        -2,
        -21.05,
      ],
    ],
    "circleHoles": [],
    "polyHoles": [
      [
        [
          12.475000000000001,
          -7.2250000000000005,
        ],
        [
          13.300000000000002,
          -7.2250000000000005,
        ],
        [
          13.300000000000002,
          -3.995,
        ],
        [
          20.050000000000004,
          -3.995,
        ],
        [
          20.050000000000004,
          -7.2250000000000005,
        ],
        [
          21.575000000000003,
          -7.2250000000000005,
        ],
        [
          21.575000000000003,
          -2.5250000000000004,
        ],
        [
          35.575,
          -2.5250000000000004,
        ],
        [
          35.575,
          -7.2250000000000005,
        ],
        [
          37.1,
          -7.2250000000000005,
        ],
        [
          37.1,
          -3.995,
        ],
        [
          43.85,
          -3.995,
        ],
        [
          43.85,
          -7.2250000000000005,
        ],
        [
          44.675000000000004,
          -7.2250000000000005,
        ],
        [
          44.675000000000004,
          -10.025,
        ],
        [
          43.85,
          -10.025,
        ],
        [
          43.85,
          -16.295,
        ],
        [
          42.125,
          -16.295,
        ],
        [
          42.125,
          -17.495,
        ],
        [
          38.825,
          -17.495,
        ],
        [
          38.825,
          -16.295,
        ],
        [
          37.1,
          -16.295,
        ],
        [
          37.1,
          -11.825,
        ],
        [
          35.575,
          -11.825,
        ],
        [
          35.575,
          -16.525,
        ],
        [
          21.575000000000003,
          -16.525,
        ],
        [
          21.575000000000003,
          -11.825,
        ],
        [
          20.050000000000004,
          -11.825,
        ],
        [
          20.050000000000004,
          -16.295,
        ],
        [
          18.325000000000003,
          -16.295,
        ],
        [
          18.325000000000003,
          -17.495,
        ],
        [
          15.025000000000002,
          -17.495,
        ],
        [
          15.025000000000002,
          -16.295,
        ],
        [
          13.300000000000002,
          -16.295,
        ],
        [
          13.300000000000002,
          -10.025,
        ],
        [
          12.475000000000001,
          -10.025,
        ],
        [
          12.475000000000001,
          -7.2250000000000005,
        ],
      ],
    ],
  },
  "svg": "<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 71.2 33.0" width="71.2mm" height="33.0mm" style="max-width:100%;height:auto">
  <style>path{vector-effect:non-scaling-stroke}</style>
  <rect x="5" y="5" width="61.150000000000006" height="23.05" rx="0" fill="#e8e8e8" stroke="#bbb" stroke-width="0.5"/>
  <g fill="#fff" stroke="#888" stroke-width="0.3"><path d="M19.475,14.225L20.300,14.225L20.300,10.995L27.050,10.995L27.050,14.225L28.575,14.225L28.575,9.525L42.575,9.525L42.575,14.225L44.100,14.225L44.100,10.995L50.850,10.995L50.850,14.225L51.675,14.225L51.675,17.025L50.850,17.025L50.850,23.295L49.125,23.295L49.125,24.495L45.825,24.495L45.825,23.295L44.100,23.295L44.100,18.825L42.575,18.825L42.575,23.525L28.575,23.525L28.575,18.825L27.050,18.825L27.050,23.295L25.325,23.295L25.325,24.495L22.025,24.495L22.025,23.295L20.300,23.295L20.300,17.025L19.475,17.025L19.475,14.225Z"/></g>
</svg>",
  "width": 61.150000000000006,
}
`;

exports[`getStabOffset boundary values (via generatePlate, stabType=1) > 6.25u key: stabilizer at offset 50mm (100mm / 2) 1`] = `
{
  "area": 28.365906250000002,
  "cutPathLength": 280.40000000000003,
  "dxf": "0
SECTION
2
HEADER
9
$ACADVER
1
AC1009
9
$INSBASE
10
0.0
20
0.0
30
0.0
9
$EXTMIN
10
0.0
20
0.0
30
0.0
9
$EXTMAX
10
1000.0
20
1000.0
30
0.0
0
ENDSEC
0
SECTION
2
TABLES
0
TABLE
2
LAYER
5
2
70
4
0
LAYER
5
10
2
0
70
0
62
7
6
Continuous
0
LAYER
5
11
2
PLATE
70
0
62
1
6
Continuous
0
LAYER
5
12
2
CUT
70
0
62
5
6
Continuous
0
ENDTAB
0
ENDSEC
0
SECTION
2
ENTITIES
0
POLYLINE
8
PLATE
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
135.0625
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
135.0625
20
-35.0500
30
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-35.0500
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
12.3312
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
13.1563
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
13.1563
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
19.9063
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
19.9063
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
59.5313
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
59.5313
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
73.5313
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
73.5313
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
113.1563
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
113.1563
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
119.9063
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
119.9063
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
120.7313
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
120.7313
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
119.9063
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
119.9063
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
118.1813
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
118.1813
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
114.8812
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
114.8812
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
113.1563
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
113.1563
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
73.5313
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
73.5313
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
59.5313
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
59.5313
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
19.9063
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
19.9063
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
18.1812
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
18.1812
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
14.8813
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
14.8813
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
13.1563
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
13.1563
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
12.3312
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
12.3312
20
-14.2250
30
0.0
0
SEQEND
0
ENDSEC
0
EOF",
  "height": 23.05,
  "regions": [
    {
      "baseH": 14.97,
      "baseW": 108.4,
      "baseX": 12.331249999999997,
      "baseY": 9.525,
      "centerX": 66.53125,
      "centerY": 16.525,
      "h": 14.97,
      "id": "key-0",
      "keyIndex": 0,
      "type": "key",
      "w": 108.4,
      "x": 12.331249999999997,
      "y": 9.525,
    },
  ],
  "stpData": {
    "boundary": [
      [
        -2,
        2,
      ],
      [
        121.0625,
        2,
      ],
      [
        121.0625,
        -21.05,
      ],
      [
        -2,
        -21.05,
      ],
    ],
    "circleHoles": [],
    "polyHoles": [
      [
        [
          5.331249999999997,
          -7.2250000000000005,
        ],
        [
          6.15625,
          -7.2250000000000005,
        ],
        [
          6.15625,
          -3.995,
        ],
        [
          12.90625,
          -3.995,
        ],
        [
          12.90625,
          -7.2250000000000005,
        ],
        [
          52.53125,
          -7.2250000000000005,
        ],
        [
          52.53125,
          -2.5250000000000004,
        ],
        [
          66.53125,
          -2.5250000000000004,
        ],
        [
          66.53125,
          -7.2250000000000005,
        ],
        [
          106.15625,
          -7.2250000000000005,
        ],
        [
          106.15625,
          -3.995,
        ],
        [
          112.90625,
          -3.995,
        ],
        [
          112.90625,
          -7.2250000000000005,
        ],
        [
          113.73125,
          -7.2250000000000005,
        ],
        [
          113.73125,
          -10.025,
        ],
        [
          112.90625,
          -10.025,
        ],
        [
          112.90625,
          -16.295,
        ],
        [
          111.18125,
          -16.295,
        ],
        [
          111.18125,
          -17.495,
        ],
        [
          107.88125,
          -17.495,
        ],
        [
          107.88125,
          -16.295,
        ],
        [
          106.15625,
          -16.295,
        ],
        [
          106.15625,
          -11.825,
        ],
        [
          66.53125,
          -11.825,
        ],
        [
          66.53125,
          -16.525,
        ],
        [
          52.53125,
          -16.525,
        ],
        [
          52.53125,
          -11.825,
        ],
        [
          12.90625,
          -11.825,
        ],
        [
          12.90625,
          -16.295,
        ],
        [
          11.181249999999999,
          -16.295,
        ],
        [
          11.181249999999999,
          -17.495,
        ],
        [
          7.881250000000001,
          -17.495,
        ],
        [
          7.881250000000001,
          -16.295,
        ],
        [
          6.15625,
          -16.295,
        ],
        [
          6.15625,
          -10.025,
        ],
        [
          5.331249999999997,
          -10.025,
        ],
        [
          5.331249999999997,
          -7.2250000000000005,
        ],
      ],
    ],
  },
  "svg": "<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133.1 33.0" width="133.1mm" height="33.0mm" style="max-width:100%;height:auto">
  <style>path{vector-effect:non-scaling-stroke}</style>
  <rect x="5" y="5" width="123.0625" height="23.05" rx="0" fill="#e8e8e8" stroke="#bbb" stroke-width="0.5"/>
  <g fill="#fff" stroke="#888" stroke-width="0.3"><path d="M12.331,14.225L13.156,14.225L13.156,10.995L19.906,10.995L19.906,14.225L59.531,14.225L59.531,9.525L73.531,9.525L73.531,14.225L113.156,14.225L113.156,10.995L119.906,10.995L119.906,14.225L120.731,14.225L120.731,17.025L119.906,17.025L119.906,23.295L118.181,23.295L118.181,24.495L114.881,24.495L114.881,23.295L113.156,23.295L113.156,18.825L73.531,18.825L73.531,23.525L59.531,23.525L59.531,18.825L19.906,18.825L19.906,23.295L18.181,23.295L18.181,24.495L14.881,24.495L14.881,23.295L13.156,23.295L13.156,17.025L12.331,17.025L12.331,14.225Z"/></g>
</svg>",
  "width": 123.0625,
}
`;

exports[`getStabOffset boundary values (via generatePlate, stabType=1) > 6u key: stabilizer at offset 47.5mm (95mm / 2) + 0.5u switch center offset 1`] = `
{
  "area": 27.268150000000006,
  "cutPathLength": 270.4,
  "dxf": "0
SECTION
2
HEADER
9
$ACADVER
1
AC1009
9
$INSBASE
10
0.0
20
0.0
30
0.0
9
$EXTMIN
10
0.0
20
0.0
30
0.0
9
$EXTMAX
10
1000.0
20
1000.0
30
0.0
0
ENDSEC
0
SECTION
2
TABLES
0
TABLE
2
LAYER
5
2
70
4
0
LAYER
5
10
2
0
70
0
62
7
6
Continuous
0
LAYER
5
11
2
PLATE
70
0
62
1
6
Continuous
0
LAYER
5
12
2
CUT
70
0
62
5
6
Continuous
0
ENDTAB
0
ENDSEC
0
SECTION
2
ENTITIES
0
POLYLINE
8
PLATE
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
130.3000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
130.3000
20
-35.0500
30
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-35.0500
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
12.4500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
13.2750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
13.2750
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
20.0250
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
20.0250
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
66.6750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
66.6750
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
80.6750
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
80.6750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
108.2750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
108.2750
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
115.0250
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
115.0250
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
115.8500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
115.8500
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
115.0250
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
115.0250
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
113.3000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
113.3000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
110.0000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
110.0000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
108.2750
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
108.2750
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
80.6750
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
80.6750
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
66.6750
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
66.6750
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
20.0250
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
20.0250
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
18.3000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
18.3000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
15.0000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
15.0000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
13.2750
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
13.2750
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
12.4500
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
12.4500
20
-14.2250
30
0.0
0
SEQEND
0
ENDSEC
0
EOF",
  "height": 23.05,
  "regions": [
    {
      "baseH": 14.97,
      "baseW": 103.4,
      "baseX": 12.450000000000003,
      "baseY": 9.525,
      "centerX": 64.15,
      "centerY": 16.525,
      "h": 14.97,
      "id": "key-0",
      "keyIndex": 0,
      "type": "key",
      "w": 103.4,
      "x": 12.450000000000003,
      "y": 9.525,
    },
  ],
  "stpData": {
    "boundary": [
      [
        -2,
        2,
      ],
      [
        116.30000000000001,
        2,
      ],
      [
        116.30000000000001,
        -21.05,
      ],
      [
        -2,
        -21.05,
      ],
    ],
    "circleHoles": [],
    "polyHoles": [
      [
        [
          5.450000000000003,
          -7.2250000000000005,
        ],
        [
          6.275000000000006,
          -7.2250000000000005,
        ],
        [
          6.275000000000006,
          -3.995,
        ],
        [
          13.025000000000006,
          -3.995,
        ],
        [
          13.025000000000006,
          -7.2250000000000005,
        ],
        [
          59.675000000000004,
          -7.2250000000000005,
        ],
        [
          59.675000000000004,
          -2.5250000000000004,
        ],
        [
          73.67500000000001,
          -2.5250000000000004,
        ],
        [
          73.67500000000001,
          -7.2250000000000005,
        ],
        [
          101.275,
          -7.2250000000000005,
        ],
        [
          101.275,
          -3.995,
        ],
        [
          108.025,
          -3.995,
        ],
        [
          108.025,
          -7.2250000000000005,
        ],
        [
          108.85000000000001,
          -7.2250000000000005,
        ],
        [
          108.85000000000001,
          -10.025,
        ],
        [
          108.025,
          -10.025,
        ],
        [
          108.025,
          -16.295,
        ],
        [
          106.30000000000001,
          -16.295,
        ],
        [
          106.30000000000001,
          -17.495,
        ],
        [
          103,
          -17.495,
        ],
        [
          103,
          -16.295,
        ],
        [
          101.275,
          -16.295,
        ],
        [
          101.275,
          -11.825,
        ],
        [
          73.67500000000001,
          -11.825,
        ],
        [
          73.67500000000001,
          -16.525,
        ],
        [
          59.675000000000004,
          -16.525,
        ],
        [
          59.675000000000004,
          -11.825,
        ],
        [
          13.025000000000006,
          -11.825,
        ],
        [
          13.025000000000006,
          -16.295,
        ],
        [
          11.300000000000004,
          -16.295,
        ],
        [
          11.300000000000004,
          -17.495,
        ],
        [
          8.000000000000007,
          -17.495,
        ],
        [
          8.000000000000007,
          -16.295,
        ],
        [
          6.275000000000006,
          -16.295,
        ],
        [
          6.275000000000006,
          -10.025,
        ],
        [
          5.450000000000003,
          -10.025,
        ],
        [
          5.450000000000003,
          -7.2250000000000005,
        ],
      ],
    ],
  },
  "svg": "<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128.3 33.0" width="128.3mm" height="33.0mm" style="max-width:100%;height:auto">
  <style>path{vector-effect:non-scaling-stroke}</style>
  <rect x="5" y="5" width="118.30000000000001" height="23.05" rx="0" fill="#e8e8e8" stroke="#bbb" stroke-width="0.5"/>
  <g fill="#fff" stroke="#888" stroke-width="0.3"><path d="M12.450,14.225L13.275,14.225L13.275,10.995L20.025,10.995L20.025,14.225L66.675,14.225L66.675,9.525L80.675,9.525L80.675,14.225L108.275,14.225L108.275,10.995L115.025,10.995L115.025,14.225L115.850,14.225L115.850,17.025L115.025,17.025L115.025,23.295L113.300,23.295L113.300,24.495L110.000,24.495L110.000,23.295L108.275,23.295L108.275,18.825L80.675,18.825L80.675,23.525L66.675,23.525L66.675,18.825L20.025,18.825L20.025,23.295L18.300,23.295L18.300,24.495L15.000,24.495L15.000,23.295L13.275,23.295L13.275,17.025L12.450,17.025L12.450,14.225Z"/></g>
</svg>",
  "width": 118.30000000000001,
}
`;

exports[`getStabOffset boundary values (via generatePlate, stabType=1) > 7u key: stabilizer at offset 57.15mm (114.3mm / 2) 1`] = `
{
  "area": 31.659175,
  "cutPathLength": 309.00000000000006,
  "dxf": "0
SECTION
2
HEADER
9
$ACADVER
1
AC1009
9
$INSBASE
10
0.0
20
0.0
30
0.0
9
$EXTMIN
10
0.0
20
0.0
30
0.0
9
$EXTMAX
10
1000.0
20
1000.0
30
0.0
0
ENDSEC
0
SECTION
2
TABLES
0
TABLE
2
LAYER
5
2
70
4
0
LAYER
5
10
2
0
70
0
62
7
6
Continuous
0
LAYER
5
11
2
PLATE
70
0
62
1
6
Continuous
0
LAYER
5
12
2
CUT
70
0
62
5
6
Continuous
0
ENDTAB
0
ENDSEC
0
SECTION
2
ENTITIES
0
POLYLINE
8
PLATE
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
149.3500
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
149.3500
20
-35.0500
30
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-35.0500
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
12.3250
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
13.1500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
13.1500
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
19.9000
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
19.9000
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
66.6750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
66.6750
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
80.6750
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
80.6750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
127.4500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
127.4500
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
134.2000
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
134.2000
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
135.0250
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
135.0250
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
134.2000
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
134.2000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
132.4750
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
132.4750
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
129.1750
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
129.1750
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
127.4500
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
127.4500
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
80.6750
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
80.6750
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
66.6750
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
66.6750
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
19.9000
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
19.9000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
18.1750
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
18.1750
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
14.8750
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
14.8750
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
13.1500
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
13.1500
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
12.3250
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
12.3250
20
-14.2250
30
0.0
0
SEQEND
0
ENDSEC
0
EOF",
  "height": 23.05,
  "regions": [
    {
      "baseH": 14.97,
      "baseW": 122.70000000000002,
      "baseX": 12.324999999999996,
      "baseY": 9.525,
      "centerX": 73.675,
      "centerY": 16.525,
      "h": 14.97,
      "id": "key-0",
      "keyIndex": 0,
      "type": "key",
      "w": 122.70000000000002,
      "x": 12.324999999999996,
      "y": 9.525,
    },
  ],
  "stpData": {
    "boundary": [
      [
        -2,
        2,
      ],
      [
        135.35,
        2,
      ],
      [
        135.35,
        -21.05,
      ],
      [
        -2,
        -21.05,
      ],
    ],
    "circleHoles": [],
    "polyHoles": [
      [
        [
          5.324999999999996,
          -7.2250000000000005,
        ],
        [
          6.149999999999999,
          -7.2250000000000005,
        ],
        [
          6.149999999999999,
          -3.995,
        ],
        [
          12.899999999999999,
          -3.995,
        ],
        [
          12.899999999999999,
          -7.2250000000000005,
        ],
        [
          59.675,
          -7.2250000000000005,
        ],
        [
          59.675,
          -2.5250000000000004,
        ],
        [
          73.675,
          -2.5250000000000004,
        ],
        [
          73.675,
          -7.2250000000000005,
        ],
        [
          120.44999999999999,
          -7.2250000000000005,
        ],
        [
          120.44999999999999,
          -3.995,
        ],
        [
          127.19999999999999,
          -3.995,
        ],
        [
          127.19999999999999,
          -7.2250000000000005,
        ],
        [
          128.025,
          -7.2250000000000005,
        ],
        [
          128.025,
          -10.025,
        ],
        [
          127.19999999999999,
          -10.025,
        ],
        [
          127.19999999999999,
          -16.295,
        ],
        [
          125.475,
          -16.295,
        ],
        [
          125.475,
          -17.495,
        ],
        [
          122.175,
          -17.495,
        ],
        [
          122.175,
          -16.295,
        ],
        [
          120.44999999999999,
          -16.295,
        ],
        [
          120.44999999999999,
          -11.825,
        ],
        [
          73.675,
          -11.825,
        ],
        [
          73.675,
          -16.525,
        ],
        [
          59.675,
          -16.525,
        ],
        [
          59.675,
          -11.825,
        ],
        [
          12.899999999999999,
          -11.825,
        ],
        [
          12.899999999999999,
          -16.295,
        ],
        [
          11.174999999999997,
          -16.295,
        ],
        [
          11.174999999999997,
          -17.495,
        ],
        [
          7.875,
          -17.495,
        ],
        [
          7.875,
          -16.295,
        ],
        [
          6.149999999999999,
          -16.295,
        ],
        [
          6.149999999999999,
          -10.025,
        ],
        [
          5.324999999999996,
          -10.025,
        ],
        [
          5.324999999999996,
          -7.2250000000000005,
        ],
      ],
    ],
  },
  "svg": "<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 147.3 33.0" width="147.3mm" height="33.0mm" style="max-width:100%;height:auto">
  <style>path{vector-effect:non-scaling-stroke}</style>
  <rect x="5" y="5" width="137.35" height="23.05" rx="0" fill="#e8e8e8" stroke="#bbb" stroke-width="0.5"/>
  <g fill="#fff" stroke="#888" stroke-width="0.3"><path d="M12.325,14.225L13.150,14.225L13.150,10.995L19.900,10.995L19.900,14.225L66.675,14.225L66.675,9.525L80.675,9.525L80.675,14.225L127.450,14.225L127.450,10.995L134.200,10.995L134.200,14.225L135.025,14.225L135.025,17.025L134.200,17.025L134.200,23.295L132.475,23.295L132.475,24.495L129.175,24.495L129.175,23.295L127.450,23.295L127.450,18.825L80.675,18.825L80.675,23.525L66.675,23.525L66.675,18.825L19.900,18.825L19.900,23.295L18.175,23.295L18.175,24.495L14.875,24.495L14.875,23.295L13.150,23.295L13.150,17.025L12.325,17.025L12.325,14.225Z"/></g>
</svg>",
  "width": 137.35,
}
`;

exports[`getStabOffset boundary values (via generatePlate, stabType=1) > 8u key: stabilizer at offset 57.15mm (same as 7u, boundary case for >=7) 1`] = `
{
  "area": 36.050200000000004,
  "cutPathLength": 309,
  "dxf": "0
SECTION
2
HEADER
9
$ACADVER
1
AC1009
9
$INSBASE
10
0.0
20
0.0
30
0.0
9
$EXTMIN
10
0.0
20
0.0
30
0.0
9
$EXTMAX
10
1000.0
20
1000.0
30
0.0
0
ENDSEC
0
SECTION
2
TABLES
0
TABLE
2
LAYER
5
2
70
4
0
LAYER
5
10
2
0
70
0
62
7
6
Continuous
0
LAYER
5
11
2
PLATE
70
0
62
1
6
Continuous
0
LAYER
5
12
2
CUT
70
0
62
5
6
Continuous
0
ENDTAB
0
ENDSEC
0
SECTION
2
ENTITIES
0
POLYLINE
8
PLATE
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
168.4000
20
-12.0000
30
0.0
0
VERTEX
8
PLATE
10
168.4000
20
-35.0500
30
0.0
0
VERTEX
8
PLATE
10
12.0000
20
-35.0500
30
0.0
0
SEQEND
0
POLYLINE
8
CUT
66
1
70
1
40
0.0
41
0.0
0
VERTEX
8
CUT
10
21.8500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
22.6750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
22.6750
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
29.4250
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
29.4250
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
76.2000
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
76.2000
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
90.2000
20
-9.5250
30
0.0
0
VERTEX
8
CUT
10
90.2000
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
136.9750
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
136.9750
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
143.7250
20
-10.9950
30
0.0
0
VERTEX
8
CUT
10
143.7250
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
144.5500
20
-14.2250
30
0.0
0
VERTEX
8
CUT
10
144.5500
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
143.7250
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
143.7250
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
142.0000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
142.0000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
138.7000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
138.7000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
136.9750
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
136.9750
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
90.2000
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
90.2000
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
76.2000
20
-23.5250
30
0.0
0
VERTEX
8
CUT
10
76.2000
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
29.4250
20
-18.8250
30
0.0
0
VERTEX
8
CUT
10
29.4250
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
27.7000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
27.7000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
24.4000
20
-24.4950
30
0.0
0
VERTEX
8
CUT
10
24.4000
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
22.6750
20
-23.2950
30
0.0
0
VERTEX
8
CUT
10
22.6750
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
21.8500
20
-17.0250
30
0.0
0
VERTEX
8
CUT
10
21.8500
20
-14.2250
30
0.0
0
SEQEND
0
ENDSEC
0
EOF",
  "height": 23.05,
  "regions": [
    {
      "baseH": 14.97,
      "baseW": 122.70000000000002,
      "baseX": 21.85,
      "baseY": 9.525,
      "centerX": 83.2,
      "centerY": 16.525,
      "h": 14.97,
      "id": "key-0",
      "keyIndex": 0,
      "type": "key",
      "w": 122.70000000000002,
      "x": 21.85,
      "y": 9.525,
    },
  ],
  "stpData": {
    "boundary": [
      [
        -2,
        2,
      ],
      [
        154.4,
        2,
      ],
      [
        154.4,
        -21.05,
      ],
      [
        -2,
        -21.05,
      ],
    ],
    "circleHoles": [],
    "polyHoles": [
      [
        [
          14.850000000000001,
          -7.2250000000000005,
        ],
        [
          15.675000000000004,
          -7.2250000000000005,
        ],
        [
          15.675000000000004,
          -3.995,
        ],
        [
          22.425000000000004,
          -3.995,
        ],
        [
          22.425000000000004,
          -7.2250000000000005,
        ],
        [
          69.2,
          -7.2250000000000005,
        ],
        [
          69.2,
          -2.5250000000000004,
        ],
        [
          83.2,
          -2.5250000000000004,
        ],
        [
          83.2,
          -7.2250000000000005,
        ],
        [
          129.975,
          -7.2250000000000005,
        ],
        [
          129.975,
          -3.995,
        ],
        [
          136.725,
          -3.995,
        ],
        [
          136.725,
          -7.2250000000000005,
        ],
        [
          137.55,
          -7.2250000000000005,
        ],
        [
          137.55,
          -10.025,
        ],
        [
          136.725,
          -10.025,
        ],
        [
          136.725,
          -16.295,
        ],
        [
          135,
          -16.295,
        ],
        [
          135,
          -17.495,
        ],
        [
          131.7,
          -17.495,
        ],
        [
          131.7,
          -16.295,
        ],
        [
          129.975,
          -16.295,
        ],
        [
          129.975,
          -11.825,
        ],
        [
          83.2,
          -11.825,
        ],
        [
          83.2,
          -16.525,
        ],
        [
          69.2,
          -16.525,
        ],
        [
          69.2,
          -11.825,
        ],
        [
          22.425000000000004,
          -11.825,
        ],
        [
          22.425000000000004,
          -16.295,
        ],
        [
          20.700000000000003,
          -16.295,
        ],
        [
          20.700000000000003,
          -17.495,
        ],
        [
          17.400000000000006,
          -17.495,
        ],
        [
          17.400000000000006,
          -16.295,
        ],
        [
          15.675000000000004,
          -16.295,
        ],
        [
          15.675000000000004,
          -10.025,
        ],
        [
          14.850000000000001,
          -10.025,
        ],
        [
          14.850000000000001,
          -7.2250000000000005,
        ],
      ],
    ],
  },
  "svg": "<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 166.4 33.0" width="166.4mm" height="33.0mm" style="max-width:100%;height:auto">
  <style>path{vector-effect:non-scaling-stroke}</style>
  <rect x="5" y="5" width="156.4" height="23.05" rx="0" fill="#e8e8e8" stroke="#bbb" stroke-width="0.5"/>
  <g fill="#fff" stroke="#888" stroke-width="0.3"><path d="M21.850,14.225L22.675,14.225L22.675,10.995L29.425,10.995L29.425,14.225L76.200,14.225L76.200,9.525L90.200,9.525L90.200,14.225L136.975,14.225L136.975,10.995L143.725,10.995L143.725,14.225L144.550,14.225L144.550,17.025L143.725,17.025L143.725,23.295L142.000,23.295L142.000,24.495L138.700,24.495L138.700,23.295L136.975,23.295L136.975,18.825L90.200,18.825L90.200,23.525L76.200,23.525L76.200,18.825L29.425,18.825L29.425,23.295L27.700,23.295L27.700,24.495L24.400,24.495L24.400,23.295L22.675,23.295L22.675,17.025L21.850,17.025L21.850,14.225Z"/></g>
</svg>",
  "width": 156.4,
}
`;
